docs/version-1.7.0/modules/en/pages/installation-setup/installation/install-using-argocd.adoc
= Install Longhorn Using ArgoCD
:current-version: {page-component-version}

== Prerequisites

* Your workstation: Install the https://argo-cd.readthedocs.io/en/stable/cli_installation/[Argo CD CLI].
* Kubernetes cluster:
 ** Ensure that each node fulfills the xref:../../installation-setup/requirements.adoc[installation requirements].
 ** Install https://argo-cd.readthedocs.io/en/stable/[Argo CD].
+
[subs="+attributes",bash]
----
kubectl create namespace argocd
kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/core-install.yaml
----
+
Allow some time for the deployment of Argo CD components in the `argocd` namespace.

____
Use https://github.com/longhorn/longhorn/blob/v{current-version}/scripts/environment_check.sh[this script] to check the Longhorn environment for potential issues.
____

== Installing Longhorn

. Log in to Argo CD.
+
[subs="+attributes",bash]
----
 argocd login --core
----

. Set the current namespace to `argocd`.
+
[subs="+attributes",bash]
----
 kubectl config set-context --current --namespace=argocd
----

. Create the Longhorn Application custom resource.
+
[subs="+attributes",bash]
----
 cat > longhorn-application.yaml <<EOF
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: longhorn
   namespace: argocd
 spec:
   syncPolicy:
     syncOptions:
       - CreateNamespace=true
   project: default
   sources:
     - chart: longhorn
       repoURL: https://charts.longhorn.io/
       targetRevision: v{current-version} # Replace with the Longhorn version you'd like to install or upgrade to
       helm:
         values: |
           preUpgradeChecker:
             jobEnabled: false
   destination:
     server: https://kubernetes.default.svc
     namespace: longhorn-system
 EOF
 kubectl apply -f longhorn-application.yaml
----

. Deploy Longhorn with the configured settings.
+
[subs="+attributes",bash]
----
 argocd app sync longhorn
----

. Verify that Longhorn was installed successfully.
+
[subs="+attributes",bash]
----
 kubectl -n longhorn-system get pod
----
+
Example of a successful Longhorn installation:
+
[subs="+attributes",bash]
----
 NAME                                                READY   STATUS    RESTARTS   AGE
 longhorn-ui-b7c844b49-w25g5                         1/1     Running   0          2m41s
 longhorn-manager-pzgsp                              1/1     Running   0          2m41s
 longhorn-driver-deployer-6bd59c9f76-lqczw           1/1     Running   0          2m41s
 longhorn-csi-plugin-mbwqz                           2/2     Running   0          100s
 csi-snapshotter-588457fcdf-22bqp                    1/1     Running   0          100s
 csi-snapshotter-588457fcdf-2wd6g                    1/1     Running   0          100s
 csi-provisioner-869bdc4b79-mzrwf                    1/1     Running   0          101s
 csi-provisioner-869bdc4b79-klgfm                    1/1     Running   0          101s
 csi-resizer-6d8cf5f99f-fd2ck                        1/1     Running   0          101s
 csi-provisioner-869bdc4b79-j46rx                    1/1     Running   0          101s
 csi-snapshotter-588457fcdf-bvjdt                    1/1     Running   0          100s
 csi-resizer-6d8cf5f99f-68cw7                        1/1     Running   0          101s
 csi-attacher-7bf4b7f996-df8v6                       1/1     Running   0          101s
 csi-attacher-7bf4b7f996-g9cwc                       1/1     Running   0          101s
 csi-attacher-7bf4b7f996-8l9sw                       1/1     Running   0          101s
 csi-resizer-6d8cf5f99f-smdjw                        1/1     Running   0          101s
 instance-manager-b34d5db1fe1e2d52bcfb308be3166cfc   1/1     Running   0          114s
 engine-image-ei-df38d2e5-cv6nc                      1/1     Running   0          114s
----

. xref:../../longhorn-system/system-access/create-ingress.adoc[Create an NGINX Ingress controller with basic authentication] to access the Longhorn UI. Authentication to the Longhorn UI is not enabled by default.
. xref:../../longhorn-system/system-access/system-access.adoc[Access the Longhorn UI].
